# template.lib

./: .clang-tidy  CMakeLists.txt  README.md
cmake/: Deploy.cmake
src/: AwesomeConfig.cmake.in  CMakeLists.txt  main.cpp
src/awesome/: CMakeLists.txt  version.hpp.in
src/awesome/core/: Awesome.cpp  Awesome.hpp  compiler.hpp  export.hpp
tests/: CMakeLists.txt
